...
                    variant="secondary"
                    onPress={onCancel}
                    size="sm"
                    style={styles.button}
                  />
                  <Button
                    title="OK"
                    variant="primary"
                    onPress={onOk}
                    size="sm"
                    style={styles.button}
                  />
                </View>
...
