...
                      });
                    }}
                    style={styles.scheduleButton}
                  />

                <Button
                  testID="site-daily-checkin"
                  variant="primary"
                  title="Daily check-in"
                  onPress={() =>
                    navigation.navigate("2PMCheck", {
                      siteId,
                      siteName: site.name,
...
